# courses_work

./: .env.sample  README.md  index.html  main.py  pyproject.toml  requirements.txt  user_settings.json
data/: operations.xlsx
src/: report.html  reports.py  result.json  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
