[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Mery-debug <m.a.shap58000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
setuptools = "^75.3.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
