[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Mery-debug <m.a.shap58000@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.isort]
line-length = 119

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
setuptools = "^75.3.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
pytest = "^8.3.3"
mock = "^5.1.0"
patch = "^1.16"
freezegun = "^1.5.1"
coverage = "^7.6.4"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
